--- a/fun4all/offline/papers/ppg239/main.tex
+++ b/fun4all/offline/papers/ppg239/main.tex
@@ -1,4 +1,4 @@
-%%%% PPG239 [dir. photon xsect and A_LL; 510 GeV; $p$$+$$p$;Z.Ji]
+ %%%% PPG239 [dir. photon xsect and A_LL; 510 GeV; $p$$+$$p$;Z.Ji]
 %%%% U.A. Acharya (PHENIX Collaboration)
 %%%%
 
@@ -42,8 +42,6 @@
 \title{Measurement of Direct-Photon Cross Section and Double-Helicity 
 Asymmetry at $\sqrt{s}=510$ GeV in $\vec{p}+\vec{p}$ Collisions}
 
-%\author{PHENIX Collaboration Author List (Brant will insert later)}
-
 \newcommand{\abilene}{Abilene Christian University, Abilene, Texas 79699, USA}
 \newcommand{\augie}{Department of Physics, Augustana University, Sioux Falls, South Dakota 57197, USA}
 \newcommand{\banaras}{Department of Physics, Banaras Hindu University, Varanasi 221005, India}
@@ -52,7 +50,7 @@ Asymmetry at $\sqrt{s}=510$ GeV in $\vec{p}+\vec{p}$ Collisions}
 \newcommand{\bnlcoll}{Collider-Accelerator Department, Brookhaven National Laboratory, Upton, New York 11973-5000, USA}
 \newcommand{\bnlphys}{Physics Department, Brookhaven National Laboratory, Upton, New York 11973-5000, USA}
 \newcommand{\caucr}{University of California-Riverside, Riverside, California 92521, USA}
-\newcommand{\charlesczech}{Charles University, Ovocn\'{y} trh 5, Praha 1, 116 36, Prague, Czech Republic}
+\newcommand{\charlesczech}{Charles University, Faculty of Mathematics and Physics, 180 00 Troja, Prague, Czech Republic}
 \newcommand{\cns}{Center for Nuclear Study, Graduate School of Science, University of Tokyo, 7-3-1 Hongo, Bunkyo, Tokyo 113-0033, Japan}
 \newcommand{\colorado}{University of Colorado, Boulder, Colorado 80309, USA}
 \newcommand{\columbia}{Columbia University, New York, New York 10027 and Nevis Laboratories, Irvington, New York 10533, USA}
@@ -84,7 +82,9 @@ Asymmetry at $\sqrt{s}=510$ GeV in $\vec{p}+\vec{p}$ Collisions}
 \newcommand{\lund}{Department of Physics, Lund University, Box 118, SE-221 00 Lund, Sweden}
 \newcommand{\maryland}{University of Maryland, College Park, Maryland 20742, USA}
 \newcommand{\mass}{Department of Physics, University of Massachusetts, Amherst, Massachusetts 01003-9337, USA}
+\newcommand{\mate}{MATE, Laboratory of Femtoscopy, K\'aroly R\'obert Campus, H-3200 Gy\"ongy\"os, M\'atrai\'ut 36, Hungary}
 \newcommand{\michigan}{Department of Physics, University of Michigan, Ann Arbor, Michigan 48109-1040, USA}
+\newcommand{\miss}{Mississippi State University, Mississippi State, Mississippi 39762, USA}
 \newcommand{\muhlenberg}{Muhlenberg College, Allentown, Pennsylvania 18104-5586, USA}
 \newcommand{\myongji}{Myongji University, Yongin, Kyonggido 449-728, Korea}
 \newcommand{\nara}{Nara Women's University, Kita-uoya Nishi-machi Nara 630-8506, Japan}
@@ -154,7 +154,9 @@ Asymmetry at $\sqrt{s}=510$ GeV in $\vec{p}+\vec{p}$ Collisions}
 \affiliation{\lund}
 \affiliation{\maryland}
 \affiliation{\mass}
+\affiliation{\mate}
 \affiliation{\michigan}
+\affiliation{\miss}
 \affiliation{\muhlenberg}
 \affiliation{\myongji}
 \affiliation{\nara}
@@ -184,7 +186,8 @@ Asymmetry at $\sqrt{s}=510$ GeV in $\vec{p}+\vec{p}$ Collisions}
 \affiliation{\yonsei}
 \affiliation{\zagreb}
 \affiliation{\zambia}
-\author{U.A.~Acharya} \affiliation{\gsu} 
+\author{N.J.~Abdulameer} \affiliation{\debrecen}
+\author{U.~Acharya} \affiliation{\gsu} 
 \author{A.~Adare} \affiliation{\colorado} 
 \author{C.~Aidala} \affiliation{\michigan} 
 \author{N.N.~Ajitanand} \altaffiliation{Deceased} \affiliation{\stonybrkc} 
@@ -206,7 +209,7 @@ Asymmetry at $\sqrt{s}=510$ GeV in $\vec{p}+\vec{p}$ Collisions}
 \author{A.~Bazilevsky} \affiliation{\bnlphys} 
 \author{M.~Beaumier} \affiliation{\caucr} 
 \author{S.~Beckman} \affiliation{\colorado} 
-\author{R.~Belmont} \affiliation{\colorado} \affiliation{\michigan} \affiliation{\northcg} 
+\author{R.~Belmont} \affiliation{\colorado} \affiliation{\northcg}
 \author{A.~Berdnikov} \affiliation{\saispbstu} 
 \author{Y.~Berdnikov} \affiliation{\saispbstu} 
 \author{L.~Bichon} \affiliation{\vandy}
@@ -230,11 +233,13 @@ Asymmetry at $\sqrt{s}=510$ GeV in $\vec{p}+\vec{p}$ Collisions}
 \author{Z.~Citron} \affiliation{\weizmann} 
 \author{M.~Connors} \affiliation{\gsu} 
 \author{R.~Corliss} \affiliation{\stonycrkp} 
-\author{T.~Cs\"org\H{o}} \affiliation{\wigner} 
+\author{Y.~Corrales~Morales} \affiliation{\losalamos}
 \author{M.~Csan\'ad} \affiliation{\elte} 
+\author{T.~Cs\"org\H{o}} \affiliation{\mate} \affiliation{\wigner} 
 \author{A.~Datta} \affiliation{\newmex} 
 \author{M.S.~Daugherity} \affiliation{\abilene} 
 \author{G.~David} \affiliation{\bnlphys} \affiliation{\stonycrkp} 
+\author{C.T.~Dean} \affiliation{\losalamos}
 \author{K.~DeBlasio} \affiliation{\newmex} 
 \author{K.~Dehmelt} \affiliation{\stonycrkp} 
 \author{A.~Denisov} \affiliation{\ihepprot} 
@@ -242,6 +247,7 @@ Asymmetry at $\sqrt{s}=510$ GeV in $\vec{p}+\vec{p}$ Collisions}
 \author{E.J.~Desmond} \affiliation{\bnlphys} 
 \author{L.~Ding} \affiliation{\isu} 
 \author{A.~Dion} \affiliation{\stonycrkp} 
+\author{V.~Doomra} \affiliation{\stonycrkp}
 \author{J.H.~Do} \affiliation{\yonsei} 
 \author{A.~Drees} \affiliation{\stonycrkp} 
 \author{K.A.~Drees} \affiliation{\bnlcoll} 
@@ -256,6 +262,7 @@ Asymmetry at $\sqrt{s}=510$ GeV in $\vec{p}+\vec{p}$ Collisions}
 \author{D.E.~Fields} \affiliation{\newmex} 
 \author{M.~Finger,\,Jr.} \affiliation{\charlesczech} 
 \author{M.~Finger} \affiliation{\charlesczech} 
+\author{D.~Firak} \affiliation{\debrecen} \affiliation{\stonycrkp}
 \author{D.~Fitzgerald} \affiliation{\michigan} 
 \author{S.L.~Fokin} \affiliation{\kurchatov} 
 \author{J.E.~Frantz} \affiliation{\ohio} 
@@ -286,7 +293,7 @@ Asymmetry at $\sqrt{s}=510$ GeV in $\vec{p}+\vec{p}$ Collisions}
 \author{T.K.~Hemmick} \affiliation{\stonycrkp} 
 \author{X.~He} \affiliation{\gsu} 
 \author{J.C.~Hill} \affiliation{\isu} 
-\author{A.~Hodges} \affiliation{\gsu} 
+\author{A.~Hodges} \affiliation{\gsu} \affiliation{\illuiuc}
 \author{R.S.~Hollis} \affiliation{\caucr} 
 \author{K.~Homma} \affiliation{\hiroshima} 
 \author{B.~Hong} \affiliation{\korea} 
@@ -337,6 +344,7 @@ Asymmetry at $\sqrt{s}=510$ GeV in $\vec{p}+\vec{p}$ Collisions}
 \author{J.~Koster} \affiliation{\rikjrbrc} 
 \author{D.~Kotov} \affiliation{\pnpi} \affiliation{\saispbstu} 
 \author{L.~Kovacs} \affiliation{\elte}
+\author{B.~Kurgyis} \affiliation{\elte} 
 \author{K.~Kurita} \affiliation{\rikkyo} 
 \author{M.~Kurosawa} \affiliation{\riken} \affiliation{\rikjrbrc} 
 \author{Y.~Kwon} \affiliation{\yonsei} 
@@ -404,13 +412,14 @@ Asymmetry at $\sqrt{s}=510$ GeV in $\vec{p}+\vec{p}$ Collisions}
 \author{E.~O'Brien} \affiliation{\bnlphys} 
 \author{C.A.~Ogilvie} \affiliation{\isu} 
 \author{J.D.~Orjuela~Koop} \affiliation{\colorado} 
+\author{M.~Orosz} \affiliation{\debrecen}
 \author{J.D.~Osborn} \affiliation{\michigan} \affiliation{\ornl} 
 \author{A.~Oskarsson} \affiliation{\lund} 
 \author{K.~Ozawa} \affiliation{\kek} \affiliation{\tsukuba} 
 \author{R.~Pak} \affiliation{\bnlphys} 
 \author{V.~Pantuev} \affiliation{\inrras} 
 \author{V.~Papavassiliou} \affiliation{\nmsu} 
-\author{S.~Park} \affiliation{\seoulnat} \affiliation{\stonycrkp} 
+\author{S.~Park} \affiliation{\miss} \affiliation{\seoulnat} \affiliation{\stonycrkp}
 \author{L.~Patel} \affiliation{\gsu} 
 \author{M.~Patel} \affiliation{\isu} 
 \author{S.F.~Pate} \affiliation{\nmsu} 
@@ -425,7 +434,7 @@ Asymmetry at $\sqrt{s}=510$ GeV in $\vec{p}+\vec{p}$ Collisions}
 \author{C.~Pinkenburg} \affiliation{\bnlphys} 
 \author{R.~Pinson} \affiliation{\abilene} 
 \author{R.P.~Pisani} \affiliation{\bnlphys} 
-\author{M.~Potekhin} \affiliation{\bnlphys} 
+\author{M.~Potekhin} \affiliation{\bnlphys}
 \author{A.~Pun} \affiliation{\ohio} 
 \author{M.L.~Purschke} \affiliation{\bnlphys} 
 \author{P.V.~Radzevich} \affiliation{\saispbstu} 
@@ -462,9 +471,11 @@ Asymmetry at $\sqrt{s}=510$ GeV in $\vec{p}+\vec{p}$ Collisions}
 \author{A.~Sexton} \affiliation{\maryland} 
 \author{D.~Sharma} \affiliation{\stonycrkp} 
 \author{I.~Shein} \affiliation{\ihepprot} 
+\author{M.~Shibata} \affiliation{\nara}
 \author{T.-A.~Shibata} \affiliation{\riken} \affiliation{\titech} 
 \author{K.~Shigaki} \affiliation{\hiroshima} 
 \author{M.~Shimomura} \affiliation{\isu} \affiliation{\nara} 
+\author{Z.~Shi} \affiliation{\losalamos}
 \author{P.~Shukla} \affiliation{\barc} 
 \author{A.~Sickles} \affiliation{\bnlphys} \affiliation{\illuiuc} 
 \author{C.L.~Silva} \affiliation{\losalamos} 
@@ -487,12 +498,13 @@ Asymmetry at $\sqrt{s}=510$ GeV in $\vec{p}+\vec{p}$ Collisions}
 \author{J.~Sun} \affiliation{\stonycrkp} 
 \author{Z.~Sun} \affiliation{\debrecen}
 \author{J.~Sziklai} \affiliation{\wigner} 
+\author{R.~Takahama} \affiliation{\nara}
 \author{A.~Takahara} \affiliation{\cns} 
 \author{A.~Taketani} \affiliation{\riken} \affiliation{\rikjrbrc} 
 \author{K.~Tanida} \affiliation{\jaea} \affiliation{\rikjrbrc} \affiliation{\seoulnat} 
 \author{M.J.~Tannenbaum} \affiliation{\bnlphys} 
 \author{S.~Tarafdar} \affiliation{\vandy} \affiliation{\weizmann} 
-\author{A.~Taranenko} \affiliation{\natmephi} \affiliation{\stonybrkc} 
+\author{A.~Taranenko} \affiliation{\natmephi} \affiliation{\stonybrkc}
 \author{A.~Timilsina} \affiliation{\isu} 
 \author{T.~Todoroki} \affiliation{\riken} \affiliation{\rikjrbrc} \affiliation{\tsukuba}
 \author{M.~Tom\'a\v{s}ek} \affiliation{\czechtech} 
@@ -510,6 +522,7 @@ Asymmetry at $\sqrt{s}=510$ GeV in $\vec{p}+\vec{p}$ Collisions}
 \author{V.~Vrba} \affiliation{\czechtech} \affiliation{\instpasczech} 
 \author{E.~Vznuzdaev} \affiliation{\pnpi} 
 \author{X.R.~Wang} \affiliation{\nmsu} \affiliation{\rikjrbrc} 
+\author{Z.~Wang} \affiliation{\baruch}
 \author{D.~Watanabe} \affiliation{\hiroshima} 
 \author{Y.~Watanabe} \affiliation{\riken} \affiliation{\rikjrbrc} 
 \author{Y.S.~Watanabe} \affiliation{\cns} \affiliation{\kek} 
@@ -529,9 +542,9 @@ Asymmetry at $\sqrt{s}=510$ GeV in $\vec{p}+\vec{p}$ Collisions}
 \author{I.E.~Yushmanov} \affiliation{\kurchatov} 
 \author{W.A.~Zajc} \affiliation{\columbia} 
 \author{A.~Zelenski} \affiliation{\bnlcoll} 
-\author{S.~Zharko} \affiliation{\saispbstu} 
 \author{L.~Zou} \affiliation{\caucr} 
 \collaboration{PHENIX Collaboration}  \noaffiliation
+
 
 \date{\today}
 
@@ -541,16 +554,17 @@ Asymmetry at $\sqrt{s}=510$ GeV in $\vec{p}+\vec{p}$ Collisions}
 
 \linenumbers
 
-We present the measurement of the cross section and double-helicity 
+We present measurements of the cross section and double-helicity 
 asymmetry $A_{LL}$ of direct-photon production in $\vec{p}+\vec{p}$ 
-collisions at $\sqrt{s}=510$ GeV. The measurement has been performed at 
+collisions at $\sqrt{s}=510$ GeV. The measurements have been performed at 
 midrapidity ($|\eta|<0.25$) with the PHENIX detector at the Relativistic 
 Heavy Ion Collider.  Direct photons are dominantly produced by the 
 quark-gluon scattering at relativistic energies. Direct photons are 
 produced from the initial partonic hard scattering and do not interact 
-via the strong force.  Therefore, this measurement provides a clean and 
+via the strong force.  Therefore, this measurement provides clean and 
 direct access to the gluons in the polarized proton in the 
-gluon-momentum-fraction range $0.02<x<0.08$.
+gluon-momentum-fraction range $0.02<x<0.08$, which unlike previous 
+measurements, is directly sensitive to the sign of the gluon contribution.
 
 \end{abstract}
 
@@ -559,7 +573,7 @@ gluon-momentum-fraction range $0.02<x<0.08$.
 \linenumbers
 
 %%% To check PRL length insert this (uncommented) line after \\maketitle:
-%\textbf{*** page break for PRL word count ***}  \clearpage
+%%% \textbf{*** page break for PRL word count ***}  \clearpage
 %%% and see below.
 
 %\section{Introduction}
@@ -582,8 +596,8 @@ kinematic coverage of polarized data. At the Relativistic Heavy
 Ion Collider (RHIC), gluons are accessible at leading order in the hard 
 scattering.  Measurements of the double-helicity asymmetry (\ALL) are 
 directly sensitive to the polarized gluon distribution via 
-longitudinally polarized $\vec{p}+\vec{p}$ collisions. Recent RHIC measurements 
-of \pizero and jets at $\sqrt{s}$ = 62.4 and 200 
+longitudinally polarized $\vec{p}+\vec{p}$ collisions. Recent RHIC 
+measurements of \pizero and jets at $\sqrt{s}$ = 62.4 and 200 
 GeV~\cite{PhysRevD.90.012007,PhysRevLett.103.012003,PhysRevD.79.012003, 
 PhysRevD.86.032006,PhysRevLett.115.092002} that 
 were included in global analyses have shown the first direct evidence of 
@@ -592,11 +606,13 @@ proton~\cite{PhysRevLett.113.012001, 2014276} in the gluon momentum
 fraction ($x$) range larger than 0.05. Measurements at the higher energy 
 of $\sqrt{s}$ = 510 GeV~\cite{PhysRevD.93.011501,PhysRevD.100.052005} 
 have confirmed the nonzero gluon polarization and extended the minimum 
-$x$ reach to $\approx$0.01. Recent analysis by Jefferson Lab Angular Momentum (JAM)
-Collaboration showed that the two scenarios of positive and negative gluon-spin contribution,
-are indistinguishable from each other based on the existing data \cite{PhysRevD.105.074022}.
-This can be resolved with a new observable such as direct photon production
-in $\vec{p}+\vec{p}$ scattering which is linearly sensitive to gluon helicity.
+$x$ reach to $\approx$0.01. Recent analysis by the Jefferson Lab Angular 
+Momentum (JAM) Collaboration showed that the two scenarios of positive 
+and negative gluon-spin contributions are indistinguishable from each 
+other based on the existing data~\cite{PhysRevD.105.074022}.
+This can be resolved using direct-photon production in 
+$\vec{p}+\vec{p}$ scattering, which is linearly sensitive to gluon 
+helicity.
 
 Direct photons are all those photons that are not coming from decays of 
 final-state hadrons. The quark-gluon Compton process $qg \rightarrow 
@@ -607,7 +623,7 @@ interactions in the final state. Therefore, they provide a direct probe
 to the initial state of colliding protons. The double-helicity asymmetry 
 of direct-photon production in longitudinally polarized $\vec{p}+\vec{p}$ 
 collisions is sensitive to both the sign and magnitude of the gluon-spin 
-contribution to the proton spin. For this reason, \ALL was thought 
+contributions to the proton spin. For this reason, \ALL was thought 
 to be a \textit{golden} channel to access the gluon spin in the 1992 
 RHIC-spin proposal~\cite{Bunce:1992vca,doi:10.1146/annurev.nucl.50.1.525}. 
 In this Letter, we report the first measurements of this observable.
@@ -683,7 +699,7 @@ distribution. The inclusive direct-photon yield is then determined as
 \gamma_{{\rm dir}}^{{\rm inc}} = \gamma_{{\rm total}}^{{\rm inc}} - \left( 1 + R_{\pi^0}^{{\rm miss}} + \delta_{h/\pi^0}^{\gamma} \right) \gamma_{\pi^0}^{{\rm inc}},
 \end{equation}
 
-where we subtract the reconstructed inclusive photons from \pizero decay 
+\noindent where we subtract the reconstructed inclusive photons from \pizero decay 
 ($\gamma_{\pi^0}^{{\rm inc}}$), those missing their partner photons 
 ($R_{\pi^0}^{{\rm miss}}\gamma_{\pi^0}^{{\rm inc}}$) and photons from 
 other hadron decays 
@@ -741,7 +757,7 @@ expressed as
 \gamma_{{\rm dir}}^{{\rm iso}} = \gamma_{{\rm total}}^{{\rm iso}} - \gamma_{\pi^0}^{{\rm iso}} - \left( R_{\pi^0}^{{\rm miss}} + V\delta_{h/\pi^0}^{\gamma} \right) \gamma_{\pi^0}^{{\rm isopair}},
 \end{equation}
 
-where $\gamma_{\pi^0}^{{\rm iso}}$ is the \pizero \ tagged-photon yield 
+\noindent where $\gamma_{\pi^0}^{{\rm iso}}$ is the \pizero \ tagged-photon yield 
 when each of the \pizero decay photons passes the isolation 
 requirement. $\gamma_{\pi^0}^{{\rm isopair}}$ is the yield when a 
 photon from a \pizero decay passes the isolation requirement while its 
@@ -749,7 +765,8 @@ partner photon energy is not included in the isolation-cone energy sum.
 Therefore, $R_{\pi^0}^{{\rm miss}}\gamma_{\pi^0}^{{\rm isopair}}$ 
 represents the yield of \pizero decay photons that are missing the energy
 of their partner photons. 
-Similarly, the term $\delta_{h/\pi^0}^{\gamma}\gamma_{\pi^0}^{{\rm isopair}}$ corrects the 
+Similarly, the term $\delta_{h/\pi^0}^{\gamma}\gamma_{\pi^0}^{{\rm isopair}}$ 
+corrects for the 
 photons from other hadron decays that pass the isolation requirement 
 while the energy of the partner photon is not included in the isolation cone 
 energy sum.  To include the effect that one of the decay photons is 
@@ -769,7 +786,7 @@ The direct-photon cross section is calculated as
 E\frac{d^3\sigma}{dp^3} = \frac{1}{\mathcal{L}} \cdot \frac{1}{2\pi p_T} \cdot \frac{1}{\Delta p_T \Delta y} \cdot \frac{r_{{\rm pileup}} \cdot \gamma_{{\rm dir}}}{\epsilon},
 \end{equation}
 
-where $\epsilon$ includes corrections for the detector acceptance, 
+\noindent where $\epsilon$ includes corrections for the detector acceptance, 
 photon reconstruction efficiency, trigger efficiency, and detector 
 smearing effects and $r_{{\rm pileup}}$ is the correction for the pileup 
 effects due to the large signal-integration time of the EMCal coupled 
@@ -828,8 +845,6 @@ GRV~FF~\cite{PhysRevD.45.3986}. The calculation is in good agreement with
 the data within the uncertainties, with slight overestimation in the 
 lowest \pT bins.
 
-%\clearpage
-
 %\subsection{Double-helicity asymmetry}
 
 The double-helicity asymmetry is defined as
@@ -838,7 +853,7 @@ The double-helicity asymmetry is defined as
 A_{LL} = \frac{\Delta\sigma}{\sigma} = \frac{\sigma_{++}-\sigma_{+-}}{\sigma_{++}+\sigma_{+-}},
 \end{equation}
 
-where $\sigma_{++}$ ($\sigma_{+-}$) is the cross section for the same 
+\noindent where $\sigma_{++}$ ($\sigma_{+-}$) is the cross section for the same 
 (opposite) helicity proton-proton collisions. This can be rewritten in 
 terms of particle yield and beam polarizations:
 
@@ -846,7 +861,7 @@ terms of particle yield and beam polarizations:
 A_{LL} = \frac{1}{P_BP_Y} \frac{N_{++}-RN_{+-}}{N_{++}+RN_{+-}}
 \end{equation}
 
-where $N_{++}$ ($N_{+-}$) is the number of isolated direct photons from 
+\noindent where $N_{++}$ ($N_{+-}$) is the number of isolated direct photons from 
 the collisions with the same (opposite) helicities. $P_{B}$ ($P_{Y}$) 
 are the polarizations for the blue (yellow) proton beams, and the 
 average values in 2013 were 0.55 (0.57)~\cite{POBLAGUEV2020164261}. $R 
@@ -875,7 +890,7 @@ background-corrected asymmetry can be calculated as
 A_{LL}^{{\rm dir}} = \frac{A_{LL}^{{\rm total}} - r_{\pi^0}A_{LL}^{\pi^0} -r_h A_{LL}^{\eta}}{1 - r_{\pi^0} - r_h},
 \end{equation}
 
-where $r_{\pi^0}$ (10\%--14\%) and $r_h$ (0.6\%--1.4\%) are background 
+\noindent where $r_{\pi^0}$ (10\%--14\%) and $r_h$ (0.6\%--1.4\%) are background 
 fractions of \pizero and other hadron-decay photons, respectively. We 
 used the bunch-shuffling technique by assigning a random spin 
 polarization to each bunch crossing to make sure there is no hidden 
@@ -898,17 +913,18 @@ sampling variant of the DSSV14 set of helicity parton
 densities)~\cite{PhysRevLett.101.072001,PhysRevLett.113.012001, 
 PhysRevD.100.114027}. The calculation is in good agreement with the 
 results within experimental uncertainties.
-The two dashed curves in Figure~\ref{fig:all} come from the global analysis
-of JAM Collaboration \cite{PhysRevD.105.074022}.
-They found there are two distinct sets of solutions for the polarized gluon
-PDF, $\Delta g$, which differ in sign.
-Even though the solutions with $\Delta g <$ 0 violate the positivity assumption,
-$|\Delta g| < g$, all previous data cannot exclude those solutions,
-due to the mixed contributions from quark-gluon and gluon-gluon interactions.
-The direct photon \ALL, on the other hand, mainly comes from the quark-gluon
-interactions and has $\chi_{reduced}^2 =$ 4.8/7 (9.5/7) with the $\Delta g >$ 0
-($\Delta g <$ 0) solutions, which shows that our measurement favors the
-$\Delta g >$ 0 solutions.
+
+The two dashed curves in Fig.~\ref{fig:all} come from the global
+analysis of the JAM Collaboration~\cite{PhysRevD.105.074022}. They found
+there are two distinct sets of solutions for the polarized gluon PDF,
+$\Delta g$, which differ in sign. Even though the solutions with
+$\Delta g<0$ violate the positivity assumption, $|\Delta g|<g$, all
+previous data cannot exclude those solutions due to the mixed
+contributions from quark-gluon and gluon-gluon interactions.  However,
+the direct-photon \ALL comes mainly from the quark-gluon interactions and
+has $\chi_{\rm reduced}^2 =$ 4.8/7 (9.5/7) with the $\Delta g>0$
+($\Delta g<0$) solutions, which shows that our measurement favors
+the $\Delta g>0$ solutions.
 
 %--------------------------------------------------- Fig_2 (was 3)
 \begin{figure}[htb]
@@ -921,9 +937,9 @@ for $p_T < 10$ GeV/c are smaller than the marker size. Not shown are
 a $3.9{\times}10^{-4}$ shift uncertainty from relative luminosity and 
 a 6.6\% scale uncertainty from polarization. The DSSV14 calculation is 
 plotted as the solid curve with $1\sigma$ uncertainty band via MC 
-replicas~\protect\cite{PhysRevLett.101.072001,PhysRevLett.113.012001,PhysRevD.100.114027}.
-The curves for JAM $\Delta g >$ 0 and $\Delta g <$ 0 solutions \cite{PhysRevD.105.074022}
-were calculated by W. Vogelsang.
+replicas~\protect\cite{PhysRevLett.101.072001,PhysRevLett.113.012001,PhysRevD.100.114027}. 
+The curves for JAM $\Delta g>0$ and $\Delta g<0$ 
+solutions~\cite{PhysRevD.105.074022} were calculated by W. Vogelsang.
 }
 \label{fig:all}
 \end{figure}
@@ -938,11 +954,11 @@ inclusive direct-photon cross section. With isolation criteria, the
 partonic level calculation is in better agreement with the measurement. 
 This is the first measurement of the \ALL of direct photons, which is 
 sensitive to the polarized-gluon distribution inside the proton.
-Our data favor positive gluon contribution which the existing
-(past) data were unable to resolve.
+Our data favor positive gluon-spin contributions that the previously
+published data were unable to resolve.
 
 %%% To check PRL length insert these (uncommented) lines here:
-%\clearpage \textbf{*** page break for PRL word count $<$3.5 pages $<$7 columns ***}
+%%% \clearpage \textbf{*** page break for PRL word count $<$3.5 pages $<$7 columns ***}
 
 %%%%%%%%%%%%%%%%%%%%%%  ACKNOWLEDGMENTS}  %%%%% MGS22a2013 version
 %% 2018 change in Korea
@@ -953,7 +969,10 @@ Our data favor positive gluon contribution which the existing
 We thank the staff of the Collider-Accelerator and Physics
 Departments at Brookhaven National Laboratory and the staff of
 the other PHENIX participating institutions for their vital
-contributions.  
+contributions.    We also thank W. Vogelsang for calculating 
+asymmetries for the positive and negative gluon-spin 
+contributions to the proton based on the JAM 
+publication~\cite{PhysRevD.105.074022}.
 We acknowledge support from the Office of Nuclear Physics in the
 Office of Science of the Department of Energy,
 the National Science Foundation,
