--- a/fun4all/offline/papers/ppg239/references.bib
+++ b/fun4all/offline/papers/ppg239/references.bib
@@ -1,5 +1,7 @@
 @article{1988364,
 title = "A measurement of the spin asymmetry and determination of the structure function g1 in deep inelastic muon-proton scattering",
+author = {Ashman, J. and others},
+collaboration = {{European Muon Collaboration}},
 journal = "Phys. Lett. B",
 volume = "206",
 number = "2",
@@ -7,26 +9,27 @@ pages = "364 - 370",
 year = "1988",
 issn = "0370-2693",
 doi = "https://doi.org/10.1016/0370-2693(88)91523-7",
-url = "http://www.sciencedirect.com/science/article/pii/0370269388915237",
-author = "{European Muon Collaboration}"
+url = "http://www.sciencedirect.com/science/article/pii/0370269388915237"
 }
 
 @article{ASHMAN19891,
-title = {An investigation of the spin structure of the proton in deep inelastic scattering of polarised muons on polarised protons},
+title = "{An investigation of the spin structure of the proton in deep inelastic scattering of polarised muons on polarised protons}",
 journal = {Nucl. Phys. B},
+author = {Ashman, J. and others},
+collaboration = {{European Muon Collaboration}},
 volume = {328},
 number = {1},
 pages = {1-35},
 year = {1989},
 issn = {0550-3213},
 doi = {https://doi.org/10.1016/0550-3213(89)90089-8},
-url = {https://www.sciencedirect.com/science/article/pii/0550321389900898},
-author = {{European Muon Collaboration}},
+url = {https://www.sciencedirect.com/science/article/pii/0550321389900898}
 }
 
 @article{PhysRevD.58.112001,
-  title = {Spin asymmetries ${A}_{1}$ and structure functions ${g}_{1}$ of the proton and the deuteron from polarized high energy muon scattering},
-  author = {{Spin Muon Collaboration}},
+  title = "{Spin asymmetries ${A}_{1}$ and structure functions ${g}_{1}$ of the proton and the deuteron from polarized high energy muon scattering}",
+  author = "Adeva, B. and others",
+  collaboration = {{Spin Muon Collaboration}},
   journal = {Phys. Rev. D},
   volume = {58},
   issue = {11},
@@ -41,6 +44,8 @@ author = {{European Muon Collaboration}},
 
 @article{ALEXAKHIN20078,
 title = "The deuteron spin-dependent structure function g1d and its first moment",
+author = "Alexakhin, V. Yu. and others",
+collaboration = "{COMPASS Collaboration}",
 journal = "Phys. Lett. B",
 volume = "647",
 number = "1",
@@ -48,13 +53,13 @@ pages = "8 - 17",
 year = "2007",
 issn = "0370-2693",
 doi = "https://doi.org/10.1016/j.physletb.2006.12.076",
-url = "http://www.sciencedirect.com/science/article/pii/S037026930700113X",
-author = "{COMPASS Collaboration}"
+url = "http://www.sciencedirect.com/science/article/pii/S037026930700113X"
 }
 
 @article{PhysRevD.75.012007,
-  title = {Precise determination of the spin structure function ${g}_{1}$ of the proton, deuteron, and neutron},
-  author = {{HERMES Collaboration}},
+  title = "{Precise determination of the spin structure function ${g}_{1}$ of the proton, deuteron, and neutron}",
+  author = "Airapetian, A. and others",
+  collaboration = {{HERMES Collaboration}},
   journal = {Phys. Rev. D},
   volume = {75},
   issue = {1},
@@ -78,7 +83,7 @@ author = "{COMPASS Collaboration}"
 
 @article{doi:10.1146/annurev.nucl.50.1.525,
 author = {Bunce, Gerry and Saito, Naohito and Soffer, Jacques and Vogelsang, Werner},
-title = {Prospects for Spin Phys. at RHIC},
+title = "{Prospects for Spin Phys. at RHIC}",
 journal = {Ann. Rev. Nucl. Part. Sci.},
 volume = {50},
 number = {1},
@@ -89,7 +94,8 @@ URL = {https://doi.org/10.1146/annurev.nucl.50.1.525}
 }
 
 @article{ADCOX2003469,
-title = {PHENIX detector overview},
+title = "{PHENIX detector overview}",
+collaboration = {{PHENIX Collaboration}},
 journal = {Nucl. Instrum. Methods Phys. Res., Sec. A},
 volume = {499},
 number = {2},
@@ -98,11 +104,11 @@ year = {2003},
 issn = {0168-9002},
 doi = {https://doi.org/10.1016/S0168-9002(02)01950-2},
 url = {https://www.sciencedirect.com/science/article/pii/S0168900202019502},
-author = {{PHENIX Collaboration}}
 }
 
 @article{ALLEN2003549,
-title = {PHENIX inner detectors},
+title = "{PHENIX inner detectors}",
+collaboration = {{PHENIX Collaboration}},
 journal = {Nucl. Instrum. Methods Phys. Res., Sec. A},
 volume = {499},
 number = {2},
@@ -111,11 +117,10 @@ year = {2003},
 issn = {0168-9002},
 doi = {https://doi.org/10.1016/S0168-9002(02)01956-3},
 url = {https://www.sciencedirect.com/science/article/pii/S0168900202019563},
-author = {{PHENIX Collaboration}}
 }
 
 @article{ADLER2001488,
-title = {The RHIC zero degree calorimeters},
+title = "{The RHIC zero degree calorimeters}",
 journal = {Nucl. Instrum. Methods Phys. Res., Sec. A},
 volume = {470},
 number = {3},
@@ -128,7 +133,9 @@ author = {C Adler and A Denisov and E Garcia and M Murray and H Stroebele and S 
 }
 
 @article{APHECETCHE2003521,
-title = {PHENIX calorimeter},
+title = "{PHENIX calorimeter}",
+author = "Aphecetche, L. and others",
+collaboration = {{PHENIX Collaboration}},
 journal = {Nucl. Instrum. Methods Phys. Res., Sec. A},
 volume = {499},
 number = {2},
@@ -137,11 +144,12 @@ year = {2003},
 issn = {0168-9002},
 doi = {https://doi.org/10.1016/S0168-9002(02)01954-X},
 url = {https://www.sciencedirect.com/science/article/pii/S016890020201954X},
-author = {{PHENIX Collaboration}}
 }
 
 @article{ADCOX2003489,
-title = {PHENIX central arm tracking detectors},
+title = "{PHENIX central arm tracking detectors}",
+author = "Adcox, K. and others",
+collaboration = {{PHENIX Collaboration}},
 journal = {Nucl. Instrum. Methods Phys. Res., Sec. A},
 volume = {499},
 number = {2},
@@ -150,11 +158,10 @@ year = {2003},
 issn = {0168-9002},
 doi = {https://doi.org/10.1016/S0168-9002(02)01952-6},
 url = {https://www.sciencedirect.com/science/article/pii/S0168900202019526},
-author = {{PHENIX Collaboration}}
 }
 
 @article{SONDHEIM2012993,
-title = {Mechanics and Assembly of the Silicon Vertex Detector for the PHENIX Experiment at RHIC},
+title = "{Mechanics and Assembly of the Silicon Vertex Detector for the PHENIX Experiment at RHIC}",
 journal = {Phys. Procedia},
 volume = {37},
 pages = {993-1002},
@@ -166,7 +173,8 @@ author = {Walter Sondheim}
 }
 
 @article{POBLAGUEV2020164261,
-title = {Systematic error analysis in the absolute hydrogen gas jet polarimeter at RHIC},
+title = "{Systematic error analysis in the absolute hydrogen gas jet polarimeter at RHIC}",
+author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Ritter},
 journal = {Nucl. Instrum. Methods Phys. Res., Sec. A},
 volume = {976},
 pages = {164261},
@@ -174,12 +182,11 @@ year = {2020},
 issn = {0168-9002},
 doi = {https://doi.org/10.1016/j.nima.2020.164261},
 url = {https://www.sciencedirect.com/science/article/pii/S0168900220306574},
-author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Ritter}
 }
 
 @article{Brun:1994aa,
     author = {Brun, Ren\'e and Bruyant, F. and Carminati, Federico and Giani, Simone and Maire, M. and McPherson, A. and Patrick, G. and Urban, L.},
-    title = {GEANT Detector Description and Simulation Tool},
+    title = "{GEANT Detector Description and Simulation Tool}",
     journal = {CERN-W5013, CERN-W-5013, W5013, W-5013},
     doi = {10.17181/CERN.MUHF.DMJ1},
     month = {10},
@@ -187,8 +194,9 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
 }
 
 @article{PhysRevLett.98.012002,
-  title = {Measurement of Direct Photon Production in $p+p$ Collisions at $\sqrt{s}=200\text{ }\text{ }\mathrm{GeV}$},
-  author = {{PHENIX Collaboration}},
+  title = "{Measurement of Direct Photon Production in $p$$+$$p$ Collisions at $\sqrt{s}=200$ GeV}",
+  collaboration = {{PHENIX Collaboration}},
+  author = "Adler, S. S. and others",
   journal = {Phys. Rev. Lett.},
   volume = {98},
   issue = {1},
@@ -202,8 +210,9 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
 }
 
 @article{PhysRevD.86.072008,
-  title = {Direct photon production in $p\mathbf{+}p$ collisions at $\sqrt{s}\mathbf{=}200\text{ }\text{ }\mathrm{GeV}$ at midrapidity},
-  author = {{PHENIX Collaboration}},
+  title = "{Direct photon production in $p$$+$$p$ collisions at $\sqrt{s}=200$ GeV at midrapidity}",
+  author = "Adare, A. and others",
+  collaboration = {{PHENIX Collaboration}},
   journal = {Phys. Rev. D},
   volume = {86},
   issue = {7},
@@ -217,8 +226,9 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
 }
 
 @article{PhysRevLett.93.202002,
-  title = {Double Helicity Asymmetry in Inclusive Midrapidity ${\ensuremath{\pi}}^{0}$ Production for Polarized $p+p$ Collisions at $\sqrt{s}=200\text{ }\text{ }\mathrm{G}\mathrm{e}\mathrm{V}$},
-  author = {{PHENIX Collaboration}},
+  title = "{Double Helicity Asymmetry in Inclusive Midrapidity ${\ensuremath{\pi}}^{0}$ Production for Polarized $p$$+$$p$ Collisions at $\sqrt{s}=200$ GeV}",
+  author = "Adler, S. S. and others",
+  collaboration = {{PHENIX Collaboration}},
   journal = {Phys. Rev. Lett.},
   volume = {93},
   issue = {20},
@@ -232,8 +242,10 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
 }
 
 @article{PhysRevD.73.091102,
-  title = {Improved measurement of double helicity asymmetry in inclulsive midrapidity ${\ensuremath{\pi}}^{0}$ production for polarized $p+p$ collisions at $\sqrt{s}=200\text{ }\text{ }\mathrm{GeV}$},
-  author = {{PHENIX Collaboration}},
+  title = "{Improved measurement of double helicity asymmetry in inclulsive midrapidity ${\ensuremath{\pi}}^{0}$ production 
+for polarized $p$$+$$p$ collisions at $\sqrt{s}=200$ GeV}",
+  author = "Adler, S. S. and others",
+  collaboration = {{PHENIX Collaboration}},
   journal = {Phys. Rev. D},
   volume = {73},
   issue = {9},
@@ -247,8 +259,9 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
 }
 
 @article{PhysRevD.76.051106,
-  title = {Inclusive cross section and double helicity asymmetry for ${\ensuremath{\pi}}^{0}$ production in $p+p$ collisions at $\sqrt{s}=200\text{ }\text{ }\mathrm{GeV}$: Implications for the polarized gluon distribution in the proton},
-  author = {{PHENIX Collaboration}},
+  title = "{Inclusive cross section and double helicity asymmetry for ${\ensuremath{\pi}}^{0}$ production in $p$$+$$p$ collisions at $\sqrt{s}=200$ GeV: Implications for the polarized gluon distribution in the proton}",
+  author = "Adare, A. and others",
+  collaboration = {{PHENIX Collaboration}},
   journal = {Phys. Rev. D},
   volume = {76},
   issue = {5},
@@ -262,8 +275,9 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
 }
 
 @article{PhysRevD.79.012003,
-  title = {Inclusive cross section and double helicity asymmetry for ${\ensuremath{\pi}}^{0}$ production in $p+p$ collisions at $\sqrt{s}=62.4\text{ }\text{ }\mathrm{GeV}$},
-  author = {{PHENIX Collaboration}},
+  title = "{Inclusive cross section and double helicity asymmetry for ${\ensuremath{\pi}}^{0}$ production in $p$$+$$p$ collisions at $\sqrt{s}=62.4$ GeV}",
+  author = "Adare, A. and others",
+  collaboration = {{PHENIX Collaboration}},
   journal = {Phys. Rev. D},
   volume = {79},
   issue = {1},
@@ -277,8 +291,10 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
 }
 
 @article{PhysRevLett.103.012003,
-  title = {Gluon-Spin Contribution to the Proton Spin from the Double-Helicity Asymmetry in Inclusive ${\ensuremath{\pi}}^{0}$ Production in Polarized $p+p$ Collisions at $\sqrt{s}=200\text{ }\text{ }\mathrm{GeV}$},
-  author = {{PHENIX Collaboration}},
+  title = "{Gluon-Spin Contribution to the Proton Spin from the Double-Helicity Asymmetry in Inclusive ${\ensuremath{\pi}}^{0}$ Production in 
+Polarized $p$$+$$p$ Collisions at $\sqrt{s}=200$ GeV}",
+  author = "Adare, A. and others",
+  collaboration = {{PHENIX Collaboration}},
   journal = {Phys. Rev. Lett.},
   volume = {103},
   issue = {1},
@@ -292,8 +308,9 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
 }
 
 @article{PhysRevD.83.032001,
-  title = {Cross section and double helicity asymmetry for $\ensuremath{\eta}$ mesons and their comparison to ${\ensuremath{\pi}}^{0}$ production in $p+p$ collisions at $\sqrt{s}=200\text{ }\text{ }\mathrm{GeV}$},
-  author = {{PHENIX Collaboration}},
+  title = "{Cross section and double helicity asymmetry for $\ensuremath{\eta}$ mesons and their comparison to ${\ensuremath{\pi}}^{0}$ production in $p$$+$$p$ collisions at $\sqrt{s}=200$ GeV}",
+  author = "Adare, A. and others",
+  collaboration = {{PHENIX Collaboration}},
   journal = {Phys. Rev. D},
   volume = {83},
   issue = {3},
@@ -307,8 +324,9 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
 }
 
 @article{PhysRevD.86.092006,
-  title = {Cross sections and double-helicity asymmetries of midrapidity inclusive charged hadrons in $p\mathbf{+}p$ collisions at $\sqrt{s}\mathbf{=}62.4\text{ }\text{ }\mathrm{GeV}$},
-  author = {{PHENIX Collaboration}},
+  title = "{Cross sections and double-helicity asymmetries of midrapidity inclusive charged hadrons in $p$$+$$p$ collisions at $\sqrt{s}=62.4$ GeV}",
+  author = "Adare, A. and others",
+  collaboration = {{PHENIX Collaboration}},
   journal = {Phys. Rev. D},
   volume = {86},
   issue = {9},
@@ -322,8 +340,9 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
 }
 
 @article{PhysRevD.90.012007,
-  title = {Inclusive double-helicity asymmetries in neutral-pion and eta-meson production in $\stackrel{\ensuremath{\rightarrow}}{p}+\stackrel{\ensuremath{\rightarrow}}{p}$ collisions at $\sqrt{s}=200\text{ }\text{ }\mathrm{GeV}$},
-  author = {{PHENIX Collaboration}},
+  title = "{Inclusive double-helicity asymmetries in neutral-pion and eta-meson production in $\stackrel{\ensuremath{\rightarrow}}{p}+\stackrel{\ensuremath{\rightarrow}}{p}$ collisions at $\sqrt{s}=200$ GeV}",
+  author = "Adare, A. and others",
+  collaboration = {{PHENIX Collaboration}},
   journal = {Phys. Rev. D},
   volume = {90},
   issue = {1},
@@ -337,8 +356,9 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
 }
 
 @article{PhysRevD.91.032001,
-  title = {Charged-pion cross sections and double-helicity asymmetries in polarized $p+p$ collisions at $\sqrt{s}=200\text{ }\text{ }\mathrm{GeV}$},
-  author = {{PHENIX Collaboration}},
+  title = "{Charged-pion cross sections and double-helicity asymmetries in polarized $p$$+$$p$ collisions at $\sqrt{s}=200$ GeV}",
+  author = "Adare, A. and others",
+  collaboration = {{PHENIX Collaboration}},
   journal = {Phys. Rev. D},
   volume = {91},
   issue = {3},
@@ -352,8 +372,9 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
 }
 
 @article{PhysRevD.93.011501,
-  title = {Inclusive cross section and double-helicity asymmetry for ${\ensuremath{\pi}}^{0}$ production at midrapidity in $p+p$ collisions at $\sqrt{s}=510\text{ }\text{ }\mathrm{GeV}$},
-  author = {{PHENIX Collaboration}},
+  title = "{Inclusive cross section and double-helicity asymmetry for ${\ensuremath{\pi}}^{0}$ production at midrapidity in $p$$+$$p$ collisions at $\sqrt{s}=510$ GeV}",
+  author = "Adare, A. and others",
+  collaboration = {{PHENIX Collaboration}},
   journal = {Phys. Rev. D},
   volume = {93},
   issue = {1},
@@ -367,8 +388,9 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
 }
 
 @article{PhysRevD.102.032001,
-  title = {Measurement of charged pion double spin asymmetries at midrapidity in longitudinally polarized $p+p$ collisions at $\sqrt{s}=510\text{ }\text{ }\mathrm{GeV}$},
-  author = {{PHENIX Collaboration}},
+  title = "{Measurement of charged pion double spin asymmetries at midrapidity in longitudinally polarized $p$$+$$p$ collisions at $\sqrt{s}=510$ GeV}",
+  author = "Acharya, U. A. and others",
+  collaboration = {{PHENIX Collaboration}},
   journal = {Phys. Rev. D},
   volume = {102},
   issue = {3},
@@ -382,8 +404,9 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
 }
 
 @article{PhysRevLett.97.252001,
-  title = {Longitudinal Double-Spin Asymmetry and Cross Section for Inclusive Jet Production in Polarized Proton Collisions at $\sqrt{s}=200\text{ }\text{ }\mathrm{GeV}$},
-  author = {{STAR Collaboration}},
+  title = "{Longitudinal Double-Spin Asymmetry and Cross Section for Inclusive Jet Production in Polarized Proton Collisions at $\sqrt{s}=200$ GeV}",
+  author = "Abelev, B. I. and others",
+  collaboration = {{STAR Collaboration}},
   journal = {Phys. Rev. Lett.},
   volume = {97},
   issue = {25},
@@ -397,8 +420,9 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
 }
 
 @article{PhysRevD.84.012006,
-  title = {Event structure and double helicity asymmetry in jet production from polarized $p+p$ collisions at $\sqrt{s}=200\text{ }\text{ }\mathrm{GeV}$},
-  author = {{PHENIX Collaboration}},
+  title = "{Event structure and double helicity asymmetry in jet production from polarized $p$$+$$p$ collisions at $\sqrt{s}=200$ GeV}",
+  author = "Adare, A. and others",
+  collaboration = {{PHENIX Collaboration}},
   journal = {Phys. Rev. D},
   volume = {84},
   issue = {1},
@@ -412,8 +436,9 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
 }
 
 @article{PhysRevD.86.032006,
-  title = {Longitudinal and transverse spin asymmetries for inclusive jet production at mid-rapidity in polarized $p\mathbf{+}p$ collisions at $\sqrt{s}\mathbf{=}200\text{ }\text{ }\mathrm{GeV}$},
-  author = {{STAR Collaboration}},
+  title = "{Longitudinal and transverse spin asymmetries for inclusive jet production at midrapidity in polarized $p$$+$$p$ collisions at $\sqrt{s}\mathbf{=}200$ GeV}",
+  author = "Abelev, B. I. and others",
+  collaboration = {{STAR Collaboration}},
   journal = {Phys. Rev. D},
   volume = {86},
   issue = {3},
@@ -427,8 +452,9 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
 }
 
 @article{PhysRevLett.115.092002,
-  title = {Precision Measurement of the Longitudinal Double-Spin Asymmetry for Inclusive Jet Production in Polarized Proton Collisions at $\sqrt{s}=200\text{ }\text{ }\mathrm{GeV}$},
-  author = {{STAR Collaboration}},
+  title = "{Precision Measurement of the Longitudinal Double-Spin Asymmetry for Inclusive Jet Production in Polarized Proton Collisions at $\sqrt{s}=200$ GeV}",
+  author = "Adamczyk, L. and others",
+  collaboration = {{STAR Collaboration}},
   journal = {Phys. Rev. Lett.},
   volume = {115},
   issue = {9},
@@ -442,8 +468,9 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
 }
 
 @article{PhysRevD.95.071103,
-  title = {Measurement of the cross section and longitudinal double-spin asymmetry for dijet production in polarized $pp$ collisions at $\sqrt{s}=200\text{ }\text{ }\mathrm{GeV}$},
-  author = {{STAR Collaboration}},
+  title = "{Measurement of the cross section and longitudinal double-spin asymmetry for dijet production in polarized $p$$+$$p$ collisions at $\sqrt{s}=200$ GeV}",
+  author = "Adamczyk, L. and others",
+  collaboration = {{STAR Collaboration}},
   journal = {Phys. Rev. D},
   volume = {95},
   issue = {7},
@@ -457,8 +484,9 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
 }
 
 @article{PhysRevD.100.052005,
-  title = {Longitudinal double-spin asymmetry for inclusive jet and dijet production in $pp$ collisions at $\sqrt{s}=510\text{ }\text{ }\mathrm{GeV}$},
-  author = {{STAR Collaboration}},
+  title = "{Longitudinal double-spin asymmetry for inclusive jet and dijet production in $p$$+$$p$ collisions at $\sqrt{s}=510$ GeV}",
+  author = "Adam, J. and others",
+  collaboration = {{STAR Collaboration}},
   journal = {Phys. Rev. D},
   volume = {100},
   issue = {5},
@@ -472,8 +500,9 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
 }
 
 @article{PhysRevD.83.052004,
-  title = {Measurement of neutral mesons in $p+p$ collisions at $\sqrt{s}=200\text{ }\text{ }\mathrm{GeV}$ and scaling properties of hadron production},
-  author = {{PHENIX Collaboration}},
+  title = "{Measurement of neutral mesons in $p+p$ collisions at $\sqrt{s}=200$ GeV and scaling properties of hadron production}",
+  author = "Adare, A. and others",
+  collaboration = {{PHENIX Collaboration}},
   journal = {Phys. Rev. D},
   volume = {83},
   issue = {5},
@@ -516,7 +545,7 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
 
 @misc{Frixione_2007,
 	author = {Stefano Frixione and Paolo Nason and Carlo Oleari},
-	title = {Matching {NLO} {QCD} computations with parton shower simulations: the {POWHEG} method},
+	title = "{Matching NLO QCD computations with parton-shower simulations: the POWHEG method}",
 	doi = {10.1088/1126-6708/2007/11/070},
         note = "{J. High Energy Phys. {\bf 11 (2007)} 070}",
 }    
@@ -531,7 +560,7 @@ author = {A.A. Poblaguev and A. Zelenski and G. Atoian and Y. Makdisi and J. Rit
 
 @misc{Alioli2010,
 author={Alioli, Simone and Nason, Paolo and Oleari, Carlo and Re, Emanuele},
-title={A general framework for implementing NLO calculations in shower Monte Carlo programs: the POWHEG BOX},
+title= "{A general framework for implementing NLO calculations in shower Monte Carlo programs: the POWHEG BOX}",
 doi={10.1007/J. High Energy Phys.06(2010)043},
     note = "{J. High Energy Phys. {\bf 06 (2010)} 043}",
 }
@@ -547,7 +576,7 @@ doi={10.1007/J. High Energy Phys.06(2010)043},
 
 @misc{Jezo2016,
 author={Je{\v{z}}o, Tom{\'a}{\v{s}} and Klasen, Michael and K{\"o}nig, Florian},
-title={Prompt photon production and photon-hadron jet correlations with POWHEG},
+title= "{Prompt photon production and photon-hadron jet correlations with POWHEG}",
 doi={10.1007/J. High Energy Phys.11(2016)033},
     note = "{J. High Energy Phys. {\bf 11 (2016)} 033}",
 }
@@ -564,7 +593,7 @@ doi={10.1007/J. High Energy Phys.11(2016)033},
 
 @misc{Klasen2018,
 author={Klasen, Michael and Klein-B{\"o}sing, Christian and Poppenborg, Hendrik},
-title={Prompt photon production and photon-jet correlations at the LHC},
+title= "{Prompt photon production and photon-jet correlations at the LHC}",
 doi={10.1007/J. High Energy Phys.03(2018)081},
     note = "{J. High Energy Phys. {\bf 03 (2018)} 081}",
 }
@@ -580,7 +609,7 @@ doi={10.1007/J. High Energy Phys.03(2018)081},
 }
 
 @article{PhysRevD.93.033006,
-  title = {New parton distribution functions from a global analysis of quantum chromodynamics},
+  title = "{New parton distribution functions from a global analysis of quantum chromodynamics}",
   author = {Dulat, Sayipjamal and Hou, Tie-Jiun and Gao, Jun and Guzzi, Marco and Huston, Joey and Nadolsky, Pavel and Pumplin, Jon and Schmidt, Carl and Stump, Daniel and Yuan, C.-P.},
   journal = {Phys. Rev. D},
   volume = {93},
@@ -595,7 +624,7 @@ doi={10.1007/J. High Energy Phys.03(2018)081},
 }
 
 @article{PhysRevD.48.3136,
-  title = {Polarized and unpolarized prompt photon production beyond the leading order},
+  title = "{Polarized and unpolarized prompt photon production beyond the leading order}",
   author = {Gordon, L. E. and Vogelsang, W.},
   journal = {Phys. Rev. D},
   volume = {48},
@@ -610,7 +639,7 @@ doi={10.1007/J. High Energy Phys.03(2018)081},
 }
 
 @article{PhysRevD.50.1901,
-  title = {Polarized and unpolarized isolated prompt photon production beyond the leading order},
+  title = "{Polarized and unpolarized isolated prompt photon production beyond the leading order}",
   author = {Gordon, L. E. and Vogelsang, W.},
   journal = {Phys. Rev. D},
   volume = {50},
@@ -629,7 +658,7 @@ author={Ball, Richard D. and Bertone, Valerio and Carrazza, Stefano
 and Deans, Christopher S. and Del Debbio, Luigi and Forte, Stefano
 and Guffanti, Alberto and Hartland, Nathan P. and Latorre, Jos{\'e} I.
 and Rojo, Juan and Ubiali, Maria},
-title={Parton distributions for the LHC run II},
+title= "{Parton distributions for the LHC run II}",
 doi={10.1007/J. High Energy Phys.04(2015)040},
     note = "{J. High Energy Phys. {\bf 04 (2015)} 040}",
 }
@@ -648,7 +677,7 @@ doi={10.1007/J. High Energy Phys.04(2015)040},
 author={Bonvini, Marco and Marzani, Simone and Rojo, Juan
 and Rottoli, Luca and Ubiali, Maria and Ball, Richard D.
 and Bertone, Valerio and Carrazza, Stefano and Hartland, Nathan P.},
-title={Parton distributions with threshold resummation},
+title= "{Parton distributions with threshold resummation}",
 doi={10.1007/J. High Energy Phys.09(2015)191},
     note = "{J. High Energy Phys. {\bf 09 (2015)} 191}",
 }
@@ -664,7 +693,7 @@ doi={10.1007/J. High Energy Phys.09(2015)191},
 
 
 @article{PhysRevD.45.3986,
-  title = {Parton structure of the photon beyond the leading order},
+  title = "{Parton structure of the photon beyond the leading order}",
   author = {Gl\"uck, M. and Reya, E. and Vogt, A.},
   journal = {Phys. Rev. D},
   volume = {45},
@@ -679,7 +708,7 @@ doi={10.1007/J. High Energy Phys.09(2015)191},
 }
 
 @article{PhysRevLett.101.072001,
-  title = {Global Analysis of Helicity Parton Densities and their Uncertainties},
+  title = "{Global Analysis of Helicity Parton Densities and their Uncertainties}",
   author = {de Florian, Daniel and Sassot, Rodolfo and Stratmann, Marco and Vogelsang, Werner},
   journal = {Phys. Rev. Lett.},
   volume = {101},
@@ -694,7 +723,7 @@ doi={10.1007/J. High Energy Phys.09(2015)191},
 }
 
 @article{PhysRevLett.113.012001,
-  title = {Evidence for Polarization of Gluons in the Proton},
+  title = "{Evidence for Polarization of Gluons in the Proton}",
   author = {de Florian, Daniel and Sassot, Rodolfo and Stratmann, Marco and Vogelsang, Werner},
   journal = {Phys. Rev. Lett.},
   volume = {113},
@@ -709,7 +738,7 @@ doi={10.1007/J. High Energy Phys.09(2015)191},
 }
 
 @article{2014276,
-title = {A first unbiased global determination of polarized PDFs and their uncertainties},
+title = "{A first unbiased global determination of polarized PDFs and their uncertainties}",
 journal = {Nucl. Phys. B},
 volume = {887},
 pages = {276-308},
@@ -721,7 +750,7 @@ author = {Emanuele R. Nocera and Richard D. Ball and Stefano Forte and Giovanni 
 }
 
 @article{PhysRevD.100.114027,
-  title = {Monte Carlo sampling variant of the DSSV14 set of helicity parton densities},
+  title = "{Monte Carlo sampling variant of the DSSV14 set of helicity parton densities}",
   author = {de Florian, Daniel and Lucero, Gonzalo Agust\'{\i}n and Sassot, Rodolfo and Stratmann, Marco and Vogelsang, Werner},
   journal = {Phys. Rev. D},
   volume = {100},
@@ -736,9 +765,9 @@ author = {Emanuele R. Nocera and Richard D. Ball and Stefano Forte and Giovanni 
 }
 
 @article{PhysRevD.105.074022,
-  title = {How well do we know the gluon polarization in the proton?},
+  title = "{How well do we know the gluon polarization in the proton?}",
   author = {Zhou, Y. and Sato, N. and Melnitchouk, W.},
-  collaboration = {Jefferson Lab Angular Momentum (JAM) Collaboration},
+  collaboration = {JAM Collaboration},
   journal = {Phys. Rev. D},
   volume = {105},
   issue = {7},
@@ -750,3 +779,6 @@ author = {Emanuele R. Nocera and Richard D. Ball and Stefano Forte and Giovanni 
   doi = {10.1103/PhysRevD.105.074022},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.105.074022}
 }
+
+
+
